--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
   <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body class="bg-black">
-  <header class="bg-bw-pattern bg-cover bg-no-repeat h-72 flex items-center flex-col p-10">
-    <img class="" src="../src/img/theverge.png"/>
-    <p class="font-sans text-sm text-white text-center mt-5 ">
+  <header class="md:bg-bw-pattern bg-cover bg-no-repeat md:h-72 flex md:items-center items-start flex-col p-5 md:p-10 bg-black h-fit">
+    <img class="md:h-auto xs:auto h-8" src="../src/img/theverge.png"/>
+    <p class="font-sans text-sm text-white text-center mt-5 invisible h-0  md:visible md:h-auto ">
       <span > Monday, August 29, 2022</span>
       <span class="before:content-['|']"> A NEW KIND OF CONNECTIVITY</span>
     </p>
       
   </header>
-  <nav class=" bg-black text-white overflow-hidden">
+  <nav class=" bg-black text-white ">
 
     <div class="flex flex-col-1 border-y-2 border-slate-400 justify-center ">
       <ul class="flex flex-row ">
@@ -123,12 +123,75 @@
         </div>
         </li>
       </ul>
-        <ul class="flex items-center  hover:bg-zinc-800">
+        <ul class="flex items-center  ">
         <li><img class=" w-5 mx-2" src="./img/search.png" /></li>
       </ul>
     </div>
   </nav>
  
+
+  <div class=" text-white lg:mx-0 xl:mx-44 sm:margin-0 flex flex-wrap mt-20 md:mx-0 2xl-56 flex-grow">
+ 
+      <div class=" lg:w-1/3 sm:w-1/2 border border-lime-400 lg:border-r-0" >
+        <img class="" src="./img/snap.webp"/>
+      </div>
+
+      <div class=" p-10 lg:w-1/3 sm:w-1/2 border border-lime-400 border-l-0">
+        <p class=" text-5xl font-bold  hover:text-pink-600">SNAP PLANS TO LAY OFF 20 PERCENT OF EMPLOYEES</p>
+        <span class="text-xs">BY <span class=" text-pink-600">ALEX HEATH</span></span>
+        <span class="text-xs before:content-['|']"> 34 COMMENTS</span>
+      </div>
+  
+   
+
+    <div class="border border-pink-600 lg:w-1/3 sm:w-1/2">
+      <img class="object-cover w-full" src="./img/netflix.webp"/>
+      <div class="p-5">
+        <p class="text-lg font-bold  hover:text-pink-600">Snaps chief business officer is leaving to run ads at Netflix</p>
+        <span class="text-xs">BY <span class=" text-pink-600">ALEX HEATH</span></span>
+        <span class="text-xs before:content-['|']"> 8 COMMENTS</span>
+      </div>  
+    </div>
+     
+       <div class="border border-pink-600 lg:w-1/3 sm:w-1/2">
+      <img class="object-cover w-full" src="./img/trump.webp"/>
+      <div class="p-5">
+        <p class="text-lg font-bold  hover:text-pink-600">Truth Social is strapped for cash and struggling to find new users</p>
+        <span class="text-xs">BY <span class=" text-pink-600">MAKENA KELLY</span></span>
+      </div>
+      </div>
+      <div class=" p-10 lg:w-1/3 sm:w-1/2">
+        <p class=" text-4xl font-bold  hover:text-pink-600">HOW TWITTER’S CHILD PORN PROBLEM RUINED ITS PLANS FOR AN ONLYFANS COMPETITOR</p>
+        <span class="text-xs">BY <span class=" text-pink-600">ALEX HEATH</span></span>
+        <span class="text-xs before:content-['|']"> 34 COMMENTS</span>
+      </div>
+
+      <div class="lg:w-1/3 sm:w-1/2">
+        <img class=" w-full" src="./img/blur.webp"/>
+      </div>
+      <div class="border border-pink-600 lg:w-1/3 sm:w-1/2">
+        <img class="w-full" src="./img/mouse.webp"/>
+        <div class="p-5">
+          <p class="text-lg font-bold  hover:text-pink-600">Truth Social is strapped for cash and struggling to find new users</p>
+          <span class="text-xs">BY <span class=" text-pink-600">MAKENA KELLY</span></span>
+        </div>
+        </div>
+        <div class="border border-pink-600 lg:w-1/3 sm:w-1/2 sm:flex-1">
+          <img class="w-full" src="./img/mouse.webp"/>
+          <div class="p-5">
+            <p class="text-lg font-bold  hover:text-pink-600">Truth Social is strapped for cash and struggling to find new users</p>
+            <span class="text-xs">BY <span class=" text-pink-600">MAKENA KELLY</span></span>
+          </div>
+          </div>
+          <div class="border border-pink-600 lg:w-1/3 sm:w-1/2 ">
+            <img class="w-full" src="./img/demand.webp"/>
+            <div class="p-5">
+              <p class="text-lg font-bold  hover:text-pink-600">Truth Social is strapped for cash and struggling to find new users</p>
+              <span class="text-xs">BY <span class=" text-pink-600">MAKENA KELLY</span></span>
+            </div>
+            </div> 
+    </div>
+  
 
 </body>
 </html>
