--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,21 @@
     <div
       class="md:bg-bw-pattern bg-cover bg-no-repeat md:h-72 flex md:items-center items-start flex-col p-5 md:p-10 bg-black"
     >
-      <img class="md:h-auto lg:max-h-40 h-8" src="../src/img/theverge.png" />
+    <div class="flex w-full place-content-between sm:justify-center">
+      <img class="md:h-auto lg:max-h-40 h-8 w-1/2 left-0" src="../src/img/theverge.png" />
+      <img class="w-4 mx-2 hover:bg-zinc-800 sm:hidden right-0" src="./img/person.png" />
+    </div>
       <p
-        class="font-sans text-sm text-white text-center mt-5 invisible h-0 md:visible md:h-auto"
+        class="font-sans text-sm text-white text-center mt-5 hidden h-0 md:block md:h-auto"
       >
         <span> Monday, August 29, 2022</span>
         <span class="before:content-['|']"> A NEW KIND OF CONNECTIVITY</span>
       </p>
     </div>
-    <nav class="bg-black text-white ">
-      <div class="flex  border border-b-2 border-zinc-800 sm:justify-center ">
-        <ul class="flex ">
+
+    <nav class="bg-black text-white">
+      <div class="flex border border-b-2 border-zinc-800 sm:justify-center">
+        <ul class="flex">
           <li class="dropdown hover:bg-zinc-800 px-2 py-2 sm:flex hidden">
             TECH <img class="scale-50" src="./img/expand.png" />
             <div
@@ -45,7 +49,9 @@
               <a class="col-span-3">ALL TECH</a>
             </div>
           </li>
-          <li class="px-2 py-2 hover:bg-zinc-800 sm:flex lg:flex md:flex hidden">
+          <li
+            class="px-2 py-2 hover:bg-zinc-800 sm:flex lg:flex md:flex hidden"
+          >
             REVIEWS <img class="scale-50" src="./img/expand.png" />
             <div
               class="dropbtn grid grid-cols-3 gap-3 dropbtn bg-zinc-800 p-2 mt-9 absolute text-xs -ml-2"
@@ -67,23 +73,23 @@
               <a>MORE FROM VERGE REVIEWS</a>
             </div>
           </li>
-          <li class="px-2 py-2  hover:bg-zinc-800 sm:flex hidden">
+          <li class="px-2 py-2 hover:bg-zinc-800 sm:flex hidden">
             SCIENCE<img class="scale-50" src="./img/expand.png" />
             <div
               class="dropbtn grid grid-cols-3 gap-3 dropbtn bg-zinc-800 p-2 mt-9 absolute text-xs -ml-2"
             >
-            <a>Video</a>
-            <a>Health</a>
-            <a>Space</a>
-            <a>Energy</a>
-            <a>Nasa</a>
-            <a>Environment</a>
-            <a>spaceX</a>
-            <hr class=" col-span-3"/>
-           <a>ALL SCIENCE</a>
+              <a>Video</a>
+              <a>Health</a>
+              <a>Space</a>
+              <a>Energy</a>
+              <a>Nasa</a>
+              <a>Environment</a>
+              <a>spaceX</a>
+              <hr class="col-span-3" />
+              <a>ALL SCIENCE</a>
             </div>
           </li>
-          <li class="px-2 py-2  hover:bg-zinc-800 sm:hidden md:flex hidden">
+          <li class="px-2 py-2 hover:bg-zinc-800 sm:hidden md:flex hidden">
             CREATORS <img class="scale-50" src="./img/expand.png" />
             <div
               class="dropbtn grid grid-cols-3 gap-3 dropbtn bg-zinc-800 p-2 mt-9 absolute text-xs -ml-2"
@@ -101,7 +107,7 @@
               <a class="col-span-3">ALL CREATORS</a>
             </div>
           </li>
-          <li class="px-2 py-2  hover:bg-zinc-800 sm:flex hidden">
+          <li class="px-2 py-2 hover:bg-zinc-800 sm:flex hidden">
             ENTERTAINMENT<img class="scale-50" src="./img/expand.png" />
             <div
               class="dropbtn grid grid-cols-3 gap-3 dropbtn bg-zinc-800 p-2 mt-9 absolute text-xs -ml-2"
@@ -118,10 +124,10 @@
               <a class="col-span-3">ALL ENTERTAINMENT</a>
             </div>
           </li>
-          <li class="px-2 py-2 lg:flex sm:hidden  hidden">VIDEO</li>
+          <li class="px-2 py-2 lg:flex sm:hidden hidden">VIDEO</li>
           <li class="px-2 py-2 lg:flex sm:hidden xl:block hidden">FEATURES</li>
           <li class="px-2 py-2 lg:flex sm:hidden xl:block hidden">PODCASTS</li>
-          <li class="px-2 py-2  hover:bg-zinc-800 sm:flex hidden">
+          <li class="px-2 py-2 hover:bg-zinc-800 sm:flex hidden">
             MORE<img class="scale-50" src="./img/expand.png" />
             <div
               class="dropbtn grid grid-cols-1 gap-3 dropbtn bg-zinc-800 px-5 py-2 mt-9 absolute text-xs -ml-2"
@@ -138,7 +144,7 @@
           <li><img class="w-6 mx-1" src="./img/twitter.png" /></li>
           <li><img class="w-4 mx-1" src="./img/rss.png" /></li>
         </ul>
-        <ul class=" items-center hover:bg-zinc-800 sm:hidden lg:flex hidden">
+        <ul class="items-center hover:bg-zinc-800 sm:hidden lg:flex hidden">
           <li class=" ">
             <img class="w-4 mx-2 hover:bg-zinc-800" src="./img/person.png" />
             <div
@@ -155,74 +161,95 @@
         </ul>
       </div>
 
-      <div>
-
-        <div class="border border-b-2 border-zinc-800 sm:hidden ">
-          <ul class="flex justify-around text-white">
-            <li class="flex  hover:bg-zinc-700 px-5">
-              TECH<img class="scale-50" src="./img/expand.png" />
-              <div class="dropbtn absolute h-full w-full bg-zinc-800  text-xs left-0 mt-7" >
-                <ul>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Video</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Microsoft</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Cybersecurity</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Amazon</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Samsung</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Mobile</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Apple</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Tesla</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Policy</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Facebook</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">AI</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Privacy</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Google</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Cars</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Scooters</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">ALL TECH</li>
-  
-              </div>
-            </li>
-            <li class="flex  hover:bg-zinc-600">SCIENCE<img class="scale-50" src="./img/expand.png" />
-              <div class="dropbtn absolute h-full w-full bg-zinc-800 text-xs left-0 mt-7">
-                <ul>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Video</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Health</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Space</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Energy</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Nasa</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">Environment</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">spaceX</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">ALL SCIENCE</li>
-                </ul>
-              </div>
-            </li>
-            <li class="flex  hover:bg-zinc-600 ">MORE<img class="scale-50" src="./img/expand.png" />
-              <div class="dropbtn absolute h-full w-full bg-zinc-800 text-xs left-0 mt-7">
-                <ul>
-                  <li class="flex p-2 border-b-2 border-b-zinc-700 place-items-center">REVIEWS<img class="scale-50" src="./img/expand.png" />
-                  <li class="flex p-2 border-b-2 border-b-zinc-700 place-items-center">CREATORS<img class="scale-50" src="./img/expand.png" />
-                  <li class="flex p-2 border-b-2 border-b-zinc-700 place-items-center">ENTERTAINMENT<img class="scale-50" src="./img/expand.png" />
-                  <li class="p-2 border-b-2 border-b-zinc-700">FEATURES</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">PODCASTS</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">NEWSLETTERS</li>
-                  <li class="p-2 border-b-2 border-b-zinc-700">MERCH STORE</li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-      
-        </div>
-
+      <div class="border border-b-2 border-zinc-800 sm:hidden">
+        <ul class="flex text-white">
+          <li class="flex hover:bg-zinc-700 justify-center w-1/3">
+            TECH<img class="scale-50" src="./img/expand.png" />
+            <div
+              class="dropbtn absolute h-full w-full bg-zinc-800 text-xs left-0 mt-7"
+            >
+              <ul>
+                <li class="p-2 border-b-2 border-b-zinc-700">Video</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Microsoft</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Cybersecurity</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Amazon</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Samsung</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Mobile</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Apple</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Tesla</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Policy</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Facebook</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">AI</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Privacy</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Google</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Cars</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Scooters</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">ALL TECH</li>
+              </ul>
+            </div>
+          </li>
+          <li
+            class="flex hover:bg-zinc-700 w-1/3 justify-center border-l-2 border-l-zinc-700"
+          >
+            SCIENCE<img class="scale-50" src="./img/expand.png" />
+            <div
+              class="dropbtn absolute h-full w-full bg-zinc-800 text-xs left-0 mt-7"
+            >
+              <ul>
+                <li class="p-2 border-b-2 border-b-zinc-700">Video</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Health</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Space</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Energy</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Nasa</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">Environment</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">spaceX</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">ALL SCIENCE</li>
+              </ul>
+            </div>
+          </li>
+          <li
+            class="flex hover:bg-zinc-700 w-1/3 justify-center border-l-2 border-l-zinc-700"
+          >
+            MORE<img class="scale-50" src="./img/expand.png" />
+            <div
+              class="dropbtn absolute h-full w-full bg-zinc-800 text-xs left-0 mt-7"
+            >
+              <ul>
+                <li
+                  class="flex p-2 border-b-2 border-b-zinc-700 place-items-center"
+                >
+                  REVIEWS<img class="scale-50" src="./img/expand.png" />
+                </li>
+                <li
+                  class="flex p-2 border-b-2 border-b-zinc-700 place-items-center"
+                >
+                  CREATORS<img class="scale-50" src="./img/expand.png" />
+                </li>
+                <li
+                  class="flex p-2 border-b-2 border-b-zinc-700 place-items-center"
+                >
+                  ENTERTAINMENT<img class="scale-50" src="./img/expand.png" />
+                </li>
+                <li class="p-2 border-b-2 border-b-zinc-700">FEATURES</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">PODCASTS</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">NEWSLETTERS</li>
+                <li class="p-2 border-b-2 border-b-zinc-700">MERCH STORE</li>
+              </ul>
+            </div>
+          </li>
+        </ul>
       </div>
     </nav>
     <div
-      class="xl:max-w-7xl text-white m-auto justify-center flex flex-wrap mt-20 p-5 sm:p-0"
+      class="xl:max-w-7xl text-white m-auto justify-center flex flex-wrap mt-20 sm:p-0 p-5"
     >
-      <div class="lg:w-1/3 sm:w-1/2 border border-lime-400 sm:border-r-0 w-1/2">
-        <img class="object-contain" src="./img/meta.webp" />
+      <div class="lg:w-1/3 sm:w-1/2 border border-r-0 border-pink-700 w-1/2">
+        <img class="object-contain self-center" src="./img/meta.webp" />
       </div>
 
-      <div class="p-10 lg:w-1/3 sm:w-1/2 border border-lime-400 border-l-0 w-1/2">
+      <div
+        class="p-10 lg:w-1/3 sm:w-1/2 border border-lime-400 border-l-0 w-1/2"
+      >
         <p class="sm:text-5xl font-bold hover:text-pink-600 text-sm">
           SNAP PLANS TO LAY OFF 20 PERCENT OF EMPLOYEES
         </p>
@@ -256,21 +283,28 @@
           >
         </div>
       </div>
-      <div class="p-10 lg:w-1/3 sm:w-1/2 w-1/2 border border-pink-600">
-        <p class="sm:text-5xl font-bold hover:text-pink-600 text-sm ">
-          HOW TWITTER’S CHILD PORN PROBLEM RUINED ITS PLANS FOR AN ONLY FANS
-          COMPETITOR
-        </p>
-        <span class="text-xs"
-          >BY <span class="text-pink-600">ALEX HEATH</span></span
+      <div
+        class="flex lg:flex-wrap md:flex-wrap sm:flex-row flex-row-reverse flex-auto lg:w-2/3  sm:border-pink-600 sm:border-r"
+      >
+        <div
+          class="p-5 sm:w-1/2 lg:w-1/2 border border-pink-600 w-2/3 border-l-0"
         >
-        <span class="text-xs before:content-['|']"> 34 COMMENTS</span>
+          <p class="sm:text-5xl font-bold hover:text-pink-600 text-sm">
+            HOW TWITTER’S CHILD PORN PROBLEM RUINED ITS PLANS FOR AN ONLY FANS
+            COMPETITOR
+          </p>
+          <span class="text-xs"
+            >BY <span class="text-pink-600">ALEX HEATH</span></span
+          >
+          <span class="text-xs before:content-['|']"> 34 COMMENTS</span>
+        </div>
+        <div
+          class=" lg:w-1/2 sm:flex w-1/3 md:w-1/2"
+        >
+          <img class="object-contain sm:w-full h-full border-l border-pink-700" src="./img/musk.webp" />
+        </div>
       </div>
-
-      <div class="lg:w-1/3 sm:w-1/2 w-1/3">
-        <img class="object-contain sm:w-full w-1/3" src="./img/blur.webp" />
-      </div>
-      <div class="border border-pink-600 lg:w-1/3 sm:w-1/2 flex sm:block">
+      <div class="border border-pink-600 lg:w-1/3 sm:w-1/3 flex sm:block">
         <img class="object-contain sm:w-full w-1/3" src="./img/mouse.webp" />
         <div class="p-5">
           <p class="text-lg font-bold hover:text-pink-600">
@@ -281,7 +315,7 @@
           >
         </div>
       </div>
-      <div class="border border-pink-600 lg:w-1/3 sm:w-1/2 flex sm:block">
+      <div class="border border-pink-600 lg:w-1/3 sm:w-1/3 flex sm:block">
         <img class="object-contain sm:w-full w-1/3" src="./img/mouse.webp" />
         <div class="p-5">
           <p class="text-lg font-bold hover:text-pink-600">
@@ -292,7 +326,7 @@
           >
         </div>
       </div>
-      <div class="border border-pink-600 lg:w-1/3 sm:w-1/2 flex sm:block">
+      <div class="border border-pink-600 lg:w-1/3 sm:w-1/3 flex sm:block">
         <img class="object-contain sm:w-full w-1/3" src="./img/demand.webp" />
         <div class="p-5">
           <p class="text-lg font-bold hover:text-pink-600">
